name:               Afonso
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers >= 0.6.5.1
                  , directory >= 1.3.6.2
                  , filepath >= 1.4.2.2
                  , hakyll == 4.15.*
                  , pandoc >= 2.19.2
                  , pandoc-types >= 1.22.2.1
                  , split == 0.2.3.5
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010